odh-manifests/model-mesh/modelmesh/overlays/odh/rbac/networkpolicy_etcd.yaml
# Copyright 2022 IBM Corporation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: etcd
spec:
  podSelector:
    matchLabels:
      component: model-mesh-etcd
      app.kubernetes.io/part-of: model-mesh
  ingress:
    # etcd communication
    - from:
        - namespaceSelector:
            # matches controller and runtime pods
            matchLabels:
              modelmesh-enabled: "true"
          # mataches internal pods
        - podSelector: {}
      ports:
        - port: 2379
          protocol: TCP
  policyTypes:
    - Ingress
