odh-manifests/model-mesh/modelmesh/overlays/odh/rbac/remove_networkpolicy_rumtime_patch.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: modelmesh-runtimes
